// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|atoms/GradeLabel default 1`] = `
<div
  className="ui segments"
>
  <div
    className="ui segment"
  >
    <span>
      -
    </span>
  </div>
  <div
    className="ui segment"
  >
    <div
      className="ui red horizontal label"
      onClick={[Function]}
    >
      MAX
      <div
        className="detail"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="ui segment"
  >
    <div
      className="ui blue horizontal label"
      onClick={[Function]}
    >
      A
      <div
        className="detail"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="ui segment"
  >
    <div
      className="ui olive horizontal label"
      onClick={[Function]}
    >
      AA
      <div
        className="detail"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="ui segment"
  >
    <div
      className="ui orange horizontal label"
      onClick={[Function]}
    >
      AAA
      <div
        className="detail"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="ui segment"
  >
    <div
      className="ui black horizontal label"
      onClick={[Function]}
    >
      B
      <div
        className="detail"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="ui segment"
  >
    <div
      className="ui black horizontal label"
      onClick={[Function]}
    >
      C
      <div
        className="detail"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="ui segment"
  >
    <div
      className="ui black horizontal label"
      onClick={[Function]}
    >
      D
      <div
        className="detail"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="ui segment"
  >
    <div
      className="ui black horizontal label"
      onClick={[Function]}
    >
      E
      <div
        className="detail"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="ui segment"
  >
    <div
      className="ui black horizontal label"
      onClick={[Function]}
    >
      F
      <div
        className="detail"
      >
        0
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|atoms/GradeLabel diff is 0 1`] = `
<div
  className="ui segment"
>
  <div
    className="ui orange horizontal label"
    onClick={[Function]}
  >
    AAA
    <div
      className="detail"
    >
      0
    </div>
  </div>
</div>
`;

exports[`Storyshots components|atoms/GradeLabel diff is greater than 0 1`] = `
<div
  className="ui segment"
>
  <div
    className="ui orange horizontal label"
    onClick={[Function]}
  >
    AAA
    <div
      className="detail"
    >
      +1
    </div>
  </div>
</div>
`;

exports[`Storyshots components|atoms/GradeLabel diff is less than 0 1`] = `
<div
  className="ui segment"
>
  <div
    className="ui orange horizontal label"
    onClick={[Function]}
  >
    AAA
    <div
      className="detail"
    >
      -1
    </div>
  </div>
</div>
`;
